--- a/views/about.tt
+++ b/views/about.tt
@@ -28,7 +28,7 @@
       <li>click on a node, to navigate to the graph of this user</li>
     </ul>
 
-    StarGit was created by <a href="http://lumberjaph.net">Franck Cuny</a> and <a href="http://ofnodesandedges.com">Alexi Jacomy</a>.
+    StarGit was created by <a href="http://lumberjaph.net">Franck Cuny</a> and <a href="http://ofnodesandedges.com">Alexis Jacomy</a>.
     
   </div>
 </div>
